Fix dialog overflow

--- a/src/elements/common-elements/dialog-element/dialog-element.scss
+++ b/src/elements/common-elements/dialog-element/dialog-element.scss
@@ -1,7 +1,6 @@
 paper-dialog {
     background-color: #ffffff;
     border-radius: 4px;
-    //overflow: hidden;
     width: 96%;
     max-width: 700px !important;
 }
@@ -21,7 +20,7 @@ paper-dialog {
 #buttons {
     display: block;
     padding: 32px 8px 17px 24px;
-
+    overflow: hidden;
 }
 
 .right { float: right; }
